# PortFolio

./: .gitattributes  .gitignore  DEPLOYMENT-GUIDE.md  Default.html  README.md  index.html
TekTak/: .env.example
evaluaters/: README.md
fallacysuspect/: .dockerignore  .gitignore  Dockerfile  README.md  STATUS.md  argument.txt  docker-compose.yml  requirements.txt  resource.txt
resume/: index.html
snowball/: .htaccess  README.md  index.html  index.php  package-lock.json
snowball-standalone/: README.md  index.html
spotlight/: main.html  manage.html
story generator/: breakdown-takes-generator.jsx  breakdown-takes.html  bt-tracker.csv
tektak/: CURATION-TIPS.md  README.md  (+2 more)
whereyago/backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
whereyago/backend/alembic/: env.py
whereyago/backend/alembic/versions/: 0001_initial.py  0002_log_entries.py  0003_adventures.py
whereyago/backend/app/: __init__.py  main.py
whereyago/backend/app/api/: __init__.py  deps.py
whereyago/backend/app/api/v1/: adventures.py  auth.py  days.py  health.py  router.py
whereyago/backend/app/core/: __init__.py  config.py  db_logging.py  exceptions.py  logging.py  security.py
whereyago/backend/app/db/: __init__.py  base.py  session.py
whereyago/backend/app/middleware/: correlation.py
whereyago/backend/app/models/: __init__.py  adventure.py  adventure_stats.py  comment.py  day.py  enums.py  like.py  log_entry.py  rating.py  stop.py  user.py  user_info.py  weather.py
whereyago/backend/app/repositories/: __init__.py  adventure_repository.py  day_repository.py  user_repository.py
whereyago/backend/app/schemas/: __init__.py  adventure.py  day.py  stop.py  token.py  user.py
whereyago/backend/app/services/: __init__.py  adventure_service.py  auth_service.py  day_service.py
whereyago/backend/scripts/: api.sh  start.sh
whereyago/backend/tests/: conftest.py  test_adventures.py  test_days.py  test_health.py  test_logging.py
(+114 files in other folders)
