[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whereyago-backend"
version = "0.1.0"
description = "whereyago API — day-logger backend (FastAPI, SOLID, PostgreSQL)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.1.19",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.1",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.8",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ----------------------------- Ruff (lint + format) -----------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
# A sensible, strict-but-practical set. Each app layer stays clean.
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "C4",       # comprehensions
    "UP",       # pyupgrade
    "SIM",      # simplify
    "TID",      # tidy imports
    "RUF",      # ruff-specific
]
ignore = ["B008"]  # FastAPI uses function calls in argument defaults (Depends)

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E501"]
"tests/*" = ["S101"]

# ----------------------------- mypy (types) -----------------------------
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["passlib.*"]
ignore_missing_imports = true

# ----------------------------- pytest -----------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
